add_subdirectory(common)
add_subdirectory(circogen)
add_subdirectory(fdpgen)
add_subdirectory(dotgen)
add_subdirectory(dotgen2)
add_subdirectory(cdt)
#add_subdirectory(agraph)
add_subdirectory(cgraph)
#add_subdirectory(graph)
add_subdirectory(gvc)
add_subdirectory(ingraphs)
add_subdirectory(label)
add_subdirectory(neatogen)
add_subdirectory(osage)
add_subdirectory(ortho)
add_subdirectory(pack)
add_subdirectory(patchwork)
add_subdirectory(pathplan)
add_subdirectory(sparse)
add_subdirectory(sfdpgen)
add_subdirectory(twopigen)
add_subdirectory(xdot)
