# $Id$ $Revision$
## Process this file with automake to produce Makefile.in

SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
	vpsc rbtree ortho sparse patchwork expr common \
	pack xdot gvc ingraphs topfish glcomp \
	circogen dotgen fdpgen neatogen twopigen sfdpgen osage gvpr

EXTRA_DIST = Makefile.old gvc.vcproj gvc.def
