# $Id$ $Revision$
## Process this file with automake to produce Makefile.in


if WITH_CGRAPH
SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
	vpsc rbtree ortho sparse patchwork expr common \
	pack xdot gvc ingraphs topfish glcomp \
	circogen dotgen2 fdpgen neatogen twopigen sfdpgen osage gvpr
else
SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
	vpsc rbtree ortho sparse patchwork expr common \
	pack xdot gvc ingraphs topfish glcomp \
	circogen dotgen fdpgen neatogen twopigen sfdpgen osage gvpr
endif

EXTRA_DIST = Makefile.old gvc.vcproj gvc.def
