# $Id$ $Revision$
## Process this file with automake to produce Makefile.in

SUBDIRS = cdt cgraph pathplan sfio vmalloc ast \
	vpsc rbtree ortho sparse patchwork expr common \
	pack xdot label gvc ingraphs topfish glcomp mingle edgepaint \
	circogen dotgen dotgen2 fdpgen neatogen twopigen sfdpgen osage gvpr

EXTRA_DIST = gvc.vcproj gvc.def 
